[metadata]
name = py_package_01
version = 0.0.1
author = o_tokar
author_email = "tokar@mail.com"
description = Python package 01
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tokars/py_package_01
project_urls =
    Bug Tracker = https://github.com/Tokars/py_package_01/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src